syntax = "proto3";

package user;

service UserService {
  rpc TeamLogin(TeamLoginRequest) returns (TeamLoginResponse) {}
  rpc StudentLogin(StudentLoginRequest) returns (StudentLoginResponse) {}
  rpc GetInfo(GetInfoRequest) returns (UserInfoResponse) {}
  rpc GetProfile(GetRequest) returns (UserProfile) {}
  rpc List(ListRequest) returns (ListResponse) {}

  rpc UpdateInfo(UpdateInfoRequest) returns (Response) {}
}

message StudentLoginRequest {
  string student_id = 1;
  string password = 2;
}

message UpdateInfoRequest {
  uint32 id = 1;
  UserInfo info = 2;
}

message GetRequest {
  uint32 id = 1;
}

message GetInfoRequest {
  repeated uint32 ids = 1;
}

message RegisterRequest {
  string email = 1;
  string name = 2;
  string password = 3;
}

message TeamLoginRequest {
  string oauth_code = 1;
}

message TeamLoginResponse {
  string token = 1;
  string redirect_url = 2;
}

message StudentLoginResponse {
  string token = 1;
}

message UserInfo {
  uint32 id = 1;
  string name = 2;
  string email = 3;
  string avatar_url = 4;
}

message UserInfoResponse {
  repeated UserInfo list = 1;
}

message UserProfile {
  uint32 id = 1;
  string name = 2;
  uint32 role = 3;
  string avatar = 4;
  string email = 5;
}

message GetResponse {
  User user = 1;
}

message ListRequest {
  uint32 last_id = 1;
  uint32 offset = 2;
  uint32 limit = 3;
  uint32 role = 4;
}

message ListResponse {
  uint32 count = 1;
  repeated User list = 2;
}

message Request {}

message Response {}

message User {
  uint32 id = 1;
  string name = 2;
  string student_id = 3;
  string email = 4;
  string avatar = 5;
  uint32 role = 6;
}
